--- a/menuPage/menu.css
+++ b/menuPage/menu.css
@@ -27,7 +27,7 @@ body{
     flex-direction: column;
     flex-wrap: nowrap;
     width: 88%;
-    border-radius: 6px;
+    border-radius: 6px 6px;
     background-color: #ffffff;
     opacity: 0.75;
     margin-bottom: 25px;
