--- a/menuPage/menu.css
+++ b/menuPage/menu.css
@@ -89,3 +89,12 @@ body{
     color: #000;
     font-size: 18px;
 }
+
+hr {
+    width: 100%;
+    height: 8px;
+    border: 0;
+    box-shadow: inset 0 8px 8px -8px rgba(0, 0, 0, 0.5);
+}
+
+::-webkit-details-marker { display:none; }
