--- a/chooseOrderItem/addItem.css
+++ b/chooseOrderItem/addItem.css
@@ -2,14 +2,13 @@
     display: block;
     margin: auto;
     width: 410px;
-    padding-top: 10%;
 }
 
 .grid {
     border: none;
     border-radius: 15px 15px 15px 15px;
-    opacity: 0.8;
-    background-color: #f5f5f0;
+    background-color: #FFFFFF;
+    opacity: 1;
 }
 
 .grid__row1 {
