--- a/style.css
+++ b/style.css
@@ -56,5 +56,8 @@ a {
     color: brown;
 }
  hr {
-     width: 80%;
+     height: 5px;
+     border: 0;
+     box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
+     width: 100%;
  }
