--- a/chooseOrderItem/addItem.css
+++ b/chooseOrderItem/addItem.css
@@ -1,4 +1,4 @@
-.container1{
+.container1 {
     display: block;
     margin: auto;
     width: 410px;
@@ -8,7 +8,6 @@
     border: none;
     border-radius: 15px 15px 15px 15px;
     background-color: #FFFFFF;
-    opacity: 1;
 }
 
 .grid__row1 {
@@ -21,44 +20,33 @@
     border: none;
 }
 
-img:nth-child(1){
+img.pic {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    height:100px;
+    height: 100px;
 }
 
-a img{
-    height:10px !important;
-    float:left;
+a img {
+    height: 10px !important;
+    float: left;
 }
 
-/*label > input{ !* HIDE RADIO *!*/
-    /*display:none;*/
-/*}*/
-/*input[type=radio]:checked + a img{*/
-    /*background: red;*/
-/*}*/
 
 body.sansserif {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-button{
+button {
     text-align: center;
     background: #3498db;
-    background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
-    background-image: -moz-linear-gradient(top, #3498db, #2980b9);
-    background-image: -ms-linear-gradient(top, #3498db, #2980b9);
-    background-image: -o-linear-gradient(top, #3498db, #2980b9);
-    background-image: linear-gradient(to bottom, #3498db, #2980b9);
-    border-radius:10px;
+    border-radius: 5px;
     font-family: Arial;
     color: #ffffff;
     font-size: 15px;
     padding: 5px 10px 5px 10px;
     text-decoration: none;
-    margin-right: 40% ;
+    margin-right: 40%;
 }
 
 #myform {
@@ -66,10 +54,62 @@ button{
     margin: 2%;
     width: 70%;
 }
+
 .qty {
     width: 40px;
     height: 25px;
     text-align: center;
 }
-input.qtyplus { width:25px; height:25px; background-color: #3498db;border-radius:10px; }
-input.qtyminus { width:25px; height:25px;background-color: #3498db;border-radius:10px;}
+
+input.qtyplus {
+    width: 25px;
+    height: 25px;
+    background-color: #3498db;
+    border-radius: 10px;
+}
+
+input.qtyminus {
+    width: 25px;
+    height: 25px;
+    background-color: #3498db;
+    border-radius: 10px;
+}
+
+#cancel{
+    color: #c62c02;
+    font-weight: bold;
+    padding-top:5px;
+}
+
+#buttonGrid{
+    padding-top:15px;
+}
+/*.attribImg {*/
+    /*position: relative; !** this is the positioning context **!*/
+    /*width: 50px;*/
+    /*height: 50px;*/
+/*}*/
+/*input.radio {*/
+    /*visibility: hidden;*/
+/*}*/
+
+/*label {*/
+    /*position: absolute;*/
+    /*width: 100%;*/
+    /*height: 100%;*/
+    /*cursor: pointer;*/
+/*}*/
+
+/*img.imgRadio {*/
+    /*position: relative;*/
+    /*z-index: -1;*/
+    /*height: 20px;*/
+    /*width: 20px;*/
+/*}*/
+
+/*input[type="radio"]:checked+label {*/
+    /*background-image: url("../images/Selector - Single Selected 2 Copy@2x.png");*/
+    /*background-repeat: no-repeat;*/
+    /*background-size: contain;*/
+    /*height:20px;*/
+/*}*/
