--- a/startPage/style.css
+++ b/startPage/style.css
@@ -1,3 +1,13 @@
+.header_image{
+    background-image: url("../images/.png");
+}
+
+@media only screen and (max-width: 500px){
+    .header_image{
+        background-image: url("../images/ThaiGarden-Logo.png");
+    }
+}
+
 #bg{
     position: fixed;
     top: 0;
