--- a/startPage/style.css
+++ b/startPage/style.css
@@ -1,5 +1,5 @@
 .header_image{
-    background-image: url("../images/.png");
+    background-image: url("../images/ThaiGarden-Logo.png");
 }
 
 @media only screen and (max-width: 500px){
