--- a/menuPage/menu.css
+++ b/menuPage/menu.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 768px) {
+
     #bg {
         position: fixed;
         top: 0;
@@ -101,10 +101,8 @@
 
     .checkout_container_option_for {
         display: flex;
-        padding-top: 20%;
-    }
-
-    .checkout_container_option_for > p {
+        padding-top: 5%;
+        margin-left: 15%;
     }
 
     .checkout_container_option_for > form {
@@ -117,9 +115,8 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-    }
-
-    .checkout_container_option_collect > p {
+        padding-top: 5%;
+        margin-left: 15%;
     }
 
     .checkout_container_option_collect > select {
@@ -130,6 +127,8 @@
     .checkout_container_option_pay {
         display: flex;
         flex-direction: row;
+        padding-top: 5%;
+        margin-left: 15%;
     }
 
     .checkout_container_option_pay > p {
@@ -146,6 +145,7 @@
         display: flex;
         flex-direction: row;
         padding-top: 5%;
+        margin-left: 15%;
     }
 
     .checkout_container_option_name > p {
@@ -159,6 +159,7 @@
     .checkout_container_option_mobile {
         display: flex;
         flex-direction: row;
+        margin-left: 15%;
     }
 
     .checkout_container_option_mobile > p {
@@ -173,6 +174,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        margin-left: 15%;
     }
 
     .checkout_container_option_confirm > p {
@@ -215,6 +217,10 @@
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
+    }
+
+    .order_list_empty {
+        margin-left: 6%;
     }
 
     .order_coupon {
@@ -345,16 +351,25 @@
         font-size: 24px;
         font-weight: bold;
         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-        padding-left: 5%;
+        padding-left: 10%;
     }
 
     #name {
         width: 50%;
         margin-left: 20%
+
     }
 
     #contact {
         width: 50%;
-        margin-left: 4.5%;
+        margin-left: 2%;
     }
-}
+
+    #addCoupon{
+        margin-left: 6%;
+    }
+
+    #checkCoupon{
+        margin-top: 5%;
+        margin-left: 30%;
+    }
