--- a/menuPage/menu.css
+++ b/menuPage/menu.css
@@ -24,6 +24,9 @@ body{
 }
 
 .header{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
     background-color: white;
     width: 100%;
     margin-top: 1px;
